Changes made between Gamera File Releases
=========================================

 - now also builds out-of-the box on FreeBSD (thanks to David Blewett)

 - new plugin median() in category "List"
   also available on the C++ side as a template in listutilities.hpp

 - new C++ wrapper class canonicPyObject in gameramodule.hpp to make
   PyObject* usable in STL containerclasses, e.g. vector<canonicPyObject>

 - fixed problem with weak image references in classifier dialog

 - Don't show right-click menu when there is no shell


Version 3.1.1, Jun 09, 2008
---------------------------

 - new plugin textline_reading_order() in category "Page Segmentation"

 - corrected the moments() feature to actually return
   the normalized central moments

 - fixed a severe bug in the rotate() function


Version 3.1.0, Apr 14, 2008
---------------------------

 - added automatic editing algorithms for removing outliers and superfluos
   samples to kNN classifiers
   see the classifier API documentation for details
   (thanks to Colin Baumgarten)

 - new plugin category "Page Segmentation"
   with two basic algorithms based on runlength smearing and projections
   see the plugin documentation for details

 - ported to wxPython 2.8