@@ -1,6 +1,8 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - new module KdTree for fast two dimensional searches
+
  - now also builds out-of-the box on FreeBSD (thanks to David Blewett)
 
  - new plugin median() in category "List"
